--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "upstream"]
 	path = upstream
 	url = git://git.savannah.gnu.org/libtasn1.git
+[submodule "meta"]
+	path = meta
+	url = git://github.com/amylum/pkgforge-helper
